@@ -19,15 +19,3 @@
   (return-type none)
   (parameter (type-and-name guint flags))
 )
-
-(method state
-  (of-object Widget (Gtk))
-  (c-name GTK_WIDGET_STATE)
-  (return-type guint)
-)
-
-(method get_allocation
-  (of-object Widget (Gtk))
-  (c-name gtk_widget_get_allocation)
-  (return-type GtkAllocation)
-)
