@@ -1,3 +1,5 @@
+    - implemented support for struct based classes (GdkRectangle, GtkAllocation,
+      GtkRequisition, etc). (Andrei)
     - finished drag-n-drop support. (Andrei)
     - ported Scribble example from C. (Andrei)
     - modified GdkWindow::get_pointer() to be simpler, without XInput support.
